# fslinnospace

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/routers/: chat.py
api/app/schemas/: chat.py
api/scripts/: lint.sh  test.sh
