[project]
name = "fslinnospace-api"
version = "0.1.0"
description = "The api of the FSL Innovation space."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "openai>=1.59.9",
    "pydantic>=2.10.5",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.mypy]
strict = true
